--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   "homepage": "https://github.com/heroundone/todo-list#readme",
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.5.1",
+    "hash.js": "^1.1.7",
     "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "style-loader": "^3.3.1",
     "webpack": "^5.64.3",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0",
